--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 <body>
     <div class="manifesto-container">
         <!-- Main Title -->
-        <h1>THE EMPLOYMENT MANIFESTO OF JACKSON DANNER CHURCH III ("TRE’")</h1>
-        <p class="section-intro">**Infrastructure. Innovation. Indulgence. One man’s daring crusade against the forces of inefficiency.**</p>
+        <h1>An Occupation Proclamation</h1>
+        <p class="section-intro">**Infrastructure ~ Innovation ~ Indulgence** <br> One man’s daring crusade against the forces of inefficiency.</p>
 
         <!-- Section I: The Invocation -->
         <h3>I. THE INVOCATION</h3>
